# project-weather-dumb

./: .dockerignore  .gitignore  Dockerfile  PRODUCTION.md  README.md  TRAINING.md  camera.py  docker-compose.yml  keys.md  pyproject.toml  requirements.txt  run_hourly.sh  run_inference_only.sh  run_pipeline.sh  start_ngrok.sh  testing.ipynb  training.ipynb
.github/workflows/: ci.yml  deploy.yml
app/: app.py
conf/base/: catalog.yml  logging.yml  parameters.yml
data/01_raw/: 311.parquet  crashes.parquet  mta.parquet  nyiso.parquet  openmeteo.parquet
data/02_intermediate/: hourly_features.parquet
data/03_primary/: metrics.json  model_precip.pkl  model_temp.pkl
docs/: API.md  NOTES.md  PRODUCTION.md  TRAINING.md
notebooks/: testing.ipynb  training.ipynb
src/weather/: pipeline_registry.py
src/weather.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/weather/monitor/: __main__.py  monitor.py
src/weather/pipelines/data_engineering/: nodes.py  pipeline.py
src/weather/pipelines/data_science/: nodes.py  pipeline.py
src/weather/pipelines/inference/: nodes.py  pipeline.py
tests/: conftest.py  test_data_engineering.py  test_inference.py  test_pipeline.py
