[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "weather"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kedro>=0.19.0,<0.20",
    "kedro-datasets>=3.0",
    "pandas>=3.0",
    "pyarrow>=23.0",
    "requests-cache>=1.3",
    "retry-requests>=2.0",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[tool.kedro]
package_name = "weather"
project_name = "weather"
kedro_init_version = "0.19.0"
source_dir = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro_telemetry]
project_id = "8c53db12570b41ffa9d0069fb3d88f59"
